# 10mildolares

./: README.md  pyproject.toml  streamlit_app.py
data/catalog/: racional_instruments.csv
data/inputs/: fondo_a_benchmark_entry.json  fondo_a_uno_cache.csv  positions.csv  positions_template.csv
data/processed/monthly_advice/: actions.csv  portfolio_snapshot.csv  summary.csv
data/processed/regime_strategy/: ath_snapshot.csv  backtest_new_portfolio.csv  deployment_log.csv  equity_curves.csv  event_study.csv  metrics.csv  price_panel.csv  scenario_compare_2026-04-06.csv  scenario_ranking_2026-04-06.csv  simulation_3scenarios.csv  summary.json  today_watchlist_2026-04-06.csv
data/raw/: instrument_prices.csv
scripts/: monthly_rebalance_advice.py  open_daily_panel.bat  run_fondo_a_benchmark.py  run_monthly_advice.bat  run_pipeline.py  run_regime_strategy.py
src/alpha_fondo_a_monitor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/backtest/: engine.py  metrics.py
src/common/: __init__.py  io.py  models.py
src/dashboard/: app.py
src/ingestion/: spensiones.py
src/optimization/: engine.py
src/portfolio/: __init__.py  selector.py  signals.py
src/strategy/: __init__.py  regime_aware.py
tests/: test_metrics.py  test_spensiones_parser.py
